Add extra fields for CreateUser information

--- a/src/main/resources/static/CreateAccount.html
+++ b/src/main/resources/static/CreateAccount.html
@@ -44,6 +44,21 @@
                             <button class="btn btn-primary btn-login text-uppercase fw-bold" type="button" name="create" id="create">Create</button>
                         </div>
 
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Firstname">
+                            <label for="firstname">Firstname</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Lastname">
+                            <label for="lastname">Lastname</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="email" id="email" placeholder="Email">
+                            <label for="email">Email</label>
+                        </div>
+
                         <hr class="my-4">
                         <div class="form-floating mb-3">
                             <p>Already have an account? <a href="login">Login in</a></p>
